# librepods

./: AAP Definitions.md  CHANGELOG.md  CONTRIBUTING.md  FUNDING.yml  README.md  proximity_keys.py  update.json  update_nonpatch.json
.github/workflows/: ci-android.yml  ci-linux.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: l2c_fcr_hook.cpp  l2c_fcr_hook.h
android/app/src/main/java/me/kavishdevar/librepods/: CustomDeviceActivity.kt  MainActivity.kt  QuickSettingsDialogActivity.kt
android/app/src/main/java/me/kavishdevar/librepods/composables/: AccessibilitySettings.kt  AdaptiveStrengthSlider.kt  AudioSettings.kt  BatteryIndicator.kt  BatteryView.kt  ControlCenterButton.kt  ControlCenterNoiseControlSegmentedButton.kt  ConversationalAwarenessSwitch.kt  CustomDropdown.kt  IndependentToggle.kt  LoudSoundReductionSwitch.kt  NameField.kt  NavigationButton.kt  NoiseControlButton.kt  NoiseControlSettings.kt  PersonalizedVolumeSwitch.kt  PressAndHoldSettings.kt  SinglePodANCSwitch.kt  StyledSwitch.kt  ToneVolumeSlider.kt  TransparencySettings.kt  VerticalVolumeSlider.kt  VolumeControlSwitch.kt
android/app/src/main/java/me/kavishdevar/librepods/constants/: Packets.kt  StemAction.kt
android/app/src/main/java/me/kavishdevar/librepods/receivers/: BootReceiver.kt
android/app/src/main/java/me/kavishdevar/librepods/screens/: AirPodsSettingsScreen.kt  AppSettingsScreen.kt  DebugScreen.kt  HeadTrackingScreen.kt  Onboarding.kt  PressAndHoldSettingsScreen.kt  RenameScreen.kt  TroubleshootingScreen.kt
android/app/src/main/java/me/kavishdevar/librepods/services/: AirPodsQSService.kt  AirPodsService.kt
android/app/src/main/java/me/kavishdevar/librepods/utils/: AACPManager.kt  BLEManager.kt  BluetoothConnectionManager.kt  BluetoothCryptography.kt  CrossDevice.kt  GestureDetector.kt  GestureFeedback.kt  HeadOrientation.kt  IslandWindow.kt  KotlinModule.kt  LogCollector.kt  MediaController.kt  Packets.kt  PopupWindow.kt  RadareOffsetFinder.kt  SystemAPIUtils.kt
android/app/src/main/java/me/kavishdevar/librepods/widgets/: BatteryWidget.kt  NoiseControlWidget.kt
android/app/src/main/res/drawable/: ic_save.xml
android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
android/app/src/main/res/layout/: battery_widget.xml  island_window.xml  noise_control_widget.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml
android/app/src/main/res/values-night-v31/: themes.xml
android/app/src/main/res/values-v21/: styles.xml
android/app/src/main/res/values-v31/: styles.xml  themes.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
android/app/src/main/res/xml/: file_paths.xml
android/gradle/: libs.versions.toml
docs/: control_commands.md
linux/: BasicControlCommand.hpp  CMakeLists.txt  KeysQRDialog.qml  Main.qml  PodColumn.qml  QRCodeImageProvider.hpp  README.md  airpods_packets.h  autostartmanager.hpp  battery.hpp  deviceinfo.hpp  eardetection.hpp  logger.h  main.cpp  mediacontroller.cpp  mediacontroller.h  playerstatuswatcher.cpp  systemsleepmonitor.hpp  trayiconmanager.cpp  trayiconmanager.h
linux/assets/: me.kavishdevar.librepods.desktop
linux/ble/: CMakeLists.txt  blemanager.cpp  blemanager.h  bleutils.cpp  bleutils.h
linux/media/: mediacontroller.cpp  mediacontroller.h  playerstatuswatcher.cpp  playerstatuswatcher.h  pulseaudiocontroller.cpp  pulseaudiocontroller.h
root-module/: customize.sh  module.prop
(+3 files in other folders)
